argocd/grpcroute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-grpc-route
  namespace: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      name: argocd-gateway
      kind: Gateway
      sectionName: https
  hostnames:
    - argocd.raft.lutris.house
    - argocd-cli.raft.lutris.house
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: argocd-server
          port: 443
      matches:
        - headers:
            - name: Content-Type
              type: RegularExpression
              value: "^application/grpc.*$"
