argocd/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: argocd-gateway
      kind: Gateway
      sectionName: https
      group: gateway.networking.k8s.io
  hostnames:
    - argocd.raft.lutris.house
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
          kind: Service
          group: ""
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
